--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Football Match Schedule</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="tab_text_1">LAST MATCH</string>
+    <string name="tab_text_2">NEXT MATCH</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
