--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,18 @@
     <string name="tab_text_2">NEXT MATCH</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="team_logo_home">team_logo_home</string>
+    <string name="team_logo_away">team_logo_away</string>
+    <string name="goal_scorer">Goal Scorer</string>
+    <string name="shots">Shots</string>
+    <string name="gk">Goal Keeper</string>
+    <string name="defender">Defenders</string>
+    <string name="midfield">Midfielders</string>
+    <string name="forward">Forwards</string>
+    <string name="substitution">Subtitution</string>
+    <string name="yellow">Yellow Cards</string>
+    <string name="red">Red Cards</string>
 </resources>
